; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_desktop.c_CreateInheritableWinsta.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_desktop.c_CreateInheritableWinsta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CreateInheritableWinsta(i32* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 16, i32* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = load i32, i32* %7, align 4
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = call i32 @SetLastError(i32 -17960947)
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @CreateWindowStationW(i32* %16, i32 0, i32 %17, %struct.TYPE_3__* %10)
  store i32 %18, i32* %9, align 4
  %19 = call i32 (...) @GetLastError()
  %20 = load i32*, i32** %8, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* %9, align 4
  ret i32 %21
}

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @CreateWindowStationW(i32*, i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
